--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>mssi</title>
+  <title>Route Choice Modelling</title>
   <style>
     html, body {height: 100%; margin: 0}
   </style>
